Fixed image and layout issues on

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -58,5 +58,8 @@ body .navbar {
 
 .landing-white-background {
   background-color: var(--matr-navbar-text-color);
+}
+
+.home {
   color: var(--matr-navbar-bg);
 }
